// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button with Router onClick 1`] = `
<button
  className="MuiButtonBase-root-27 MuiButton-root-3 ButtonCustomized-root-1 MuiButton-text-5 MuiButton-flat-8"
  disabled={false}
  location={
    Object {
      "hash": "",
      "key": "doybwe",
      "pathname": "/anywhere",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-4"
  >
    Anywhere
  </span>
  <span
    className="MuiTouchRipple-root-30"
  />
</button>
`;

exports[`Button with Router render 1`] = `
<button
  className="MuiButtonBase-root-27 MuiButton-root-3 ButtonCustomized-root-1 MuiButton-text-5 MuiButton-flat-8"
  disabled={false}
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/",
      "url": "/",
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-4"
  >
    Anywhere
  </span>
  <span
    className="MuiTouchRipple-root-30"
  />
</button>
`;
